--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <center><a href="#" class="btn btn-info" role="button btn-sm">Download Kartu Nikah Digital</a></center>
+                        <center><a href="kartunikah.pdf" target="_blank" class="btn btn-info" role="button btn-sm">Download Kartu Nikah Digital</a></center>
                     </div>
                 </div>
               </div>
